Fix scrollbars not hiding on non-chromium browsers

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -94,6 +94,7 @@ body, #input-box {
 }
 
 #log {
+    -ms-overflow-style: none;
     bottom: 48px;
     box-sizing: border-box;
     line-height: 1.5;
@@ -101,6 +102,7 @@ body, #input-box {
     overflow-y: auto;
     padding: 16px;
     position: absolute;
+    scrollbar-width: none;
     top: 0;
     width: 100%;
 }
